# energy_agent_diagnosis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  代码工程里的数据接入方案.md  能源设备运维诊断 Agent_研发落地补充说明.md  能源设备运维诊断Agent_实施计划.md  能源设备运维诊断Agent_详细设计.md
.github/workflows/: ci.yml  frontend-e2e.yml  frontend-visual.yml  pilot-gate.yml
data_factory/evaluator_assets/: .gitkeep
data_factory/scenarios/: .gitkeep
deploy/: versions.env
deploy/dashboards/: .gitkeep
deploy/keycloak/: .gitkeep  m0-gate-realm.json  m0-realm.json
docs/: IMPLEMENTATION_STATUS.yaml  external_interface_checklist.md  rag_stage3_eval_report.md  rag_stage3_eval_set.json
docs/adr/: 0001-m0-probe-clients.md  0002-m1-contract-dependencies.md
docs/api/: .gitkeep
docs/development/: CODEX_EXECUTION_SPEC.md  M1_PLAN.md  MODULE_BOUNDARIES.md  PRODUCTION_HARDENING_SPEC.md
docs/frontend/: CODEX_VISUAL_REFERENCE.md  LOCAL_USAGE_GUIDE.md
docs/immutable/: SHA256SUMS  能源设备运维诊断Agent_详细设计.md
docs/pilot/: CONFIGURATION_REFERENCE.md  DATA_WAIVER.md  DEGRADATION_MATRIX.md  DEPLOYMENT_RUNBOOK.md  EVALUATION_GUIDE.md  INCIDENT_RUNBOOK.md  KNOWN_LIMITATIONS.md  READINESS_CHECKLIST.md  README.md  ROLLBACK_RUNBOOK.md  SECURITY_CHECKLIST.md
docs/runbooks/: .gitkeep
evaluation/thresholds/: pilot_medium_v1.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/design-system/: components.css  primitives.css  responsive.css  semantic-dark.css  semantic-light.css  token-provenance.json
frontend/lib/: theme.ts
frontend/openapi/: backend.json
frontend/scripts/: openapi-to-ts.jq
migrations/control/: 0001_initial.sql  alembic.ini  env.py
migrations/ops/: .gitkeep  0001_initial.sql
schema/descriptor/: control-v1.json  ops-v1.json
scripts/: check_module_boundaries.py  down.sh  evaluate_rag.py  m0_gate.py  m1_gate.py  prepare_m0_env.py  prepare_milvus_config.py  run_module_check.py  smoke.sh  up.sh  validate_profile.py  verify_immutable_design.py
scripts/migrations/: __init__.py  __main__.py  atomic_preflight.lua
src/energy_agent/: __init__.py  app.py  openapi.py  pilot_credentials.py
src/energy_agent_diagnosis/: __init__.py  app.py  main.py
tests/: conftest.py  test_agent_workflow.py  test_api.py  test_auth.py  test_config.py  test_contracts.py  test_diagnosis_api.py  test_errors_logging.py  test_health.py  test_main.py  test_modules_and_providers.py  test_null_or_unimplemented_real_boundaries.py  test_provider_contract_matrix.py  test_quality_rules.py  test_rag_evaluation.py  test_retrieval_evidence_package.py  test_retrieval_query_rewrite.py  test_retrieval_recall.py  test_retrieval_rerank.py  test_retrieval_service.py  test_stage2_fixture_schema.py  test_stage2_mock_providers.py  test_tool_layer_contracts.py
tests/architecture/: test_module_boundaries.py
tests/chaos/: .gitkeep
tests/contract/: test_contracts.py  test_health.py  test_m0_foundation_contract.py  test_m1_contracts.py  test_m1_migration_manifest.py  test_phase2_contracts.py  test_phase3_contracts.py  test_phase4_contracts.py  test_phase5_contracts.py  test_phase6_contracts.py  test_phase7_5_auth_contracts.py  test_phase7_contracts.py
tests/fixtures/: canonicalization_v2_vectors.json  rag_eval_cases.json
tests/integration/: .gitkeep  test_m1_mysql_migrations.py
tests/live/: .gitkeep  test_m1_redis_atomicity.py
tests/packaging/: .gitkeep
tests/performance/: .gitkeep
tests/unit/: test_canonicalization.py  test_config.py  test_context_ids.py  test_graph.py  (+17 more)
(+556 files in other folders)
