[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-agent-diagnosis"
version = "0.1.0"
description = "能源设备运维诊断 Agent 的阶段 1 工程底座"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.116",
  "httpx>=0.28",
  "prometheus-client>=0.22",
  "pydantic-settings>=2.10",
  "structlog>=25.4",
  "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
  "mypy>=1.17",
  "pytest>=8.4",
  "pytest-asyncio>=1.1",
  "pytest-cov>=6.2",
  "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/energy_agent_diagnosis"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D", "ASYNC"]
ignore = ["D203", "D213", "D400", "D415"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
packages = ["energy_agent_diagnosis"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=energy_agent_diagnosis",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["energy_agent_diagnosis"]

[tool.coverage.report]
show_missing = true
skip_covered = true
