[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-agent-diagnosis"
version = "0.0.0"
description = "Production foundation for the energy equipment diagnosis service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "influxdb-client==1.49.0",
  "minio==7.2.16",
  "mypy==1.17.1",
  "neo4j==5.28.2",
  "opensearch-py==2.8.0",
  "pika==1.3.2",
  "pymilvus==2.5.14",
  "pymysql==1.1.1",
  "pytest==8.4.1",
  "redis==6.2.0",
  "ruff==0.12.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/energy_agent"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["scripts", "src", "tests/unit", "tests/contract"]
