[project]
name = "energy-agent"
version = "0.1.0"
description = "Energy equipment diagnosis agent backend"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.16,<2",
  "asyncmy>=0.2.10,<1",
  "cryptography>=45,<48",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "influxdb-client>=1.49,<2",
  "langfuse>=3.3.1,<5",
  "langgraph>=0.6,<2",
  "pydantic-settings>=2.10,<3",
  "pymysql>=1.1,<2",
  "redis>=6.2,<9",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_agent"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires the core Docker dependencies"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["energy_agent"]

[[tool.mypy.overrides]]
module = ["langfuse.*"]
ignore_missing_imports = true
